<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AboutPigDice"
    tools:showIn="@layout/activity_about_pig_dice">

    <TextView
        android:id="@+id/title_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:textSize="50sp"
        android:text="@string/rulesTitle" >
    </TextView>

    <TextView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_about"
        android:text="@string/rules1"
        android:textSize="25sp"
        android:textColor="@color/colorPrimary">
    </TextView>

    <TextView
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/roll_one">
    </TextView>

    <TextView
        android:id="@+id/third"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/roll_2">
    </TextView>

    <TextView
        android:id="@+id/fourth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:text="@string/choice">
    </TextView>

    <Button
        android:id="@+id/return_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth"
        android:background="@color/colorPrimary"
        android:text="@string/toMenu"
        android:textSize="15sp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>